# chat_with_pdf

./: Cargo.toml  README.md
src/: main.rs
