[package]
name = "rust_chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.12.0", features = ["full"] }
clap = { version = "4.4.7", features = ["derive"] }
orca = { git = "https://github.com/scrippt-tech/orca" }
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"